--- a/index.html
+++ b/index.html
@@ -245,36 +245,54 @@
                     if (roleInputEl) roleInputEl.focus();
                 });
             }
+// Collect all calculator data
+const calculatorData = {
+    role: document.getElementById('role') ? document.getElementById('role').value.trim() : "",
+    avgSalary: document.getElementById('avgSalary') ? parseFloat(document.getElementById('avgSalary').value) : null,
+    numExits: document.getElementById('numExits') ? parseInt(document.getElementById('numExits').value) : null,
+    fixedCost: document.getElementById('fixedCost') ? parseFloat(document.getElementById('fixedCost').value) : null,
+    costPercent: document.getElementById('costPercent') ? parseFloat(document.getElementById('costPercent').value) : null
+};
 
-            if (submitEmailBtn) {
-                submitEmailBtn.addEventListener('click', function() {
-                    const email = userEmailInput ? userEmailInput.value.trim() : '';
-                    if (emailOptInConfirmation) emailOptInConfirmation.textContent = '';
-                    if (emailOptInError) emailOptInError.textContent = '';
+const dataToSend = {
+    email: email, // The 'email' variable is already defined in your existing code block
+    calculatorInputs: calculatorData
+};
 
-                    if (!email) {
-                        if (emailOptInError) emailOptInError.textContent = 'Please enter your email address.';
-                        return;
-                    }
-                    // Basic email validation
-                    const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-                    if (!emailPattern.test(email)) {
-                        if (emailOptInError) emailOptInError.textContent = 'Please enter a valid email address.';
-                        return;
-                    }
+// Change button text to show "Submitting..." and disable it
+const originalButtonText = submitEmailBtn.textContent;
+submitEmailBtn.textContent = 'Submitting...';
+submitEmailBtn.disabled = true;
 
-                    // Simulate submission
-                    if (emailOptInConfirmation) {
-                        emailOptInConfirmation.textContent = 'Your report is on its way to ' + email + '.';
-                    }
-                    if (userEmailInput) userEmailInput.value = ''; // Clear input after "submission"
-
-                    // Here you would typically send the email to your backend or email marketing service
-                    console.log('Email submitted:', email);
-                });
-            }
-        });
+fetch('/.netlify/functions/submitLead', {
+    method: 'POST',
+    headers: {
+        'Content-Type': 'application/json',
+    },
+    body: JSON.stringify(dataToSend),
+})
+.then(response => response.json())
+.then(responseData => {
+    console.log('Success from backend:', responseData);
+    if (emailOptInConfirmation) {
+        emailOptInConfirmation.textContent = 'Report request processed! Check your email (' + email + ') for details soon.';
+    }
+    // Note: Do not clear the email input here if you want it to persist
+    // if (userEmailInput) userEmailInput.value = ''; 
+})
+.catch((error) => {
+    console.error('Error sending data to backend:', error);
+    if (emailOptInError) {
+        emailOptInError.textContent = 'There was an error submitting your request. Please try again.';
+    }
+})
+.finally(() => {
+    // Re-enable button and restore text
+    submitEmailBtn.textContent = originalButtonText;
+    submitEmailBtn.disabled = false;
+});
     </script>
 
 </body>
 </html>
+
