--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
             <div id="emailOptInSection" class="mt-8 pt-6 border-t border-slate-600" style="display: none;">
                 <h3 class="text-xl font-semibold text-sky-200 mb-2">Lets Break This Down</h3>
-                <p class="text-slate-300 mb-4 text-sm">How to lower your direct replacement cost.</p>
+                <p class="text-slate-300 mb-4 text-sm">How to lower your direct replacement cost. <strong class="text-sky-400">FREE REPORT</strong></p>
                 <div class="flex flex-col sm:flex-row items-stretch sm:space-x-3 space-y-3 sm:space-y-0">
                     <input type="email" id="userEmail" name="userEmail" class="w-full sm:flex-1 p-3 bg-slate-700/70 border border-slate-500 rounded-lg text-slate-100 focus:ring-2 focus:ring-sky-500 placeholder-slate-400" placeholder="Enter your email for your detailed report">
                     <button type="button" id="submitEmailBtn" class="w-full sm:w-auto bg-green-500 hover:bg-green-600 text-white font-semibold py-3 px-5 rounded-lg transition duration-150 shadow-md hover:shadow-lg whitespace-nowrap">
