Add social media share image and meta tags

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -53,6 +54,20 @@
             -moz-appearance: textfield;
         }
     </style>
+
+    <meta property="og:title" content="Employee Turnover Cost Calculator" />
+    <meta property="og:description" content="Wondering what it's really costing you to lose employees? Use this free calculator to find out!" />
+    <meta property="og:image" content="https://gregwest.net/images/social-preview.png" />
+    <meta property="og:url" content="https://gregwest.net/" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Employee Turnover Cost Calculator" />
+    <meta name="twitter:description" content="Wondering what it's really costing you to lose employees? Use this free calculator to find out!" />
+    <meta name="twitter:image" content="https://gregwest.net/images/social-preview.png" />
+    <meta name="twitter:url" content="https://gregwest.net/" />
+    
+
 </head>
 <body class="bg-gradient-to-br from-slate-900 to-slate-800 text-slate-100 min-h-screen flex flex-col items-center justify-center p-4 selection:bg-sky-500 selection:text-white">
 
